Add subscenes. entering building mode breaks the program right now.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_FLAGS "-g -pedantic -Wall -Wextra -O2")
 
 # Source and executable
-set(SOURCE_FILES src/main.cpp src/game.cpp src/game_scene.cpp src/serf.cpp src/game_grid.cpp src/buildings.cpp src/toolbar.cpp)
+set(SOURCE_FILES src/main.cpp src/game.cpp src/game_scene.cpp src/serf.cpp src/game_grid.cpp src/buildings.cpp src/toolbar.cpp src/subscenes.cpp)
 add_executable(fiefdom ${SOURCE_FILES})
 
 # CMake modules
